--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.node.success_story.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.node.success_story.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.success_story.field_industry
     - field.field.node.success_story.field_market
     - field.field.node.success_story.field_metatags
+    - field.field.node.success_story.field_subheading
     - field.field.node.success_story.field_success_story_company
     - image.style.thumbnail
     - node.type.success_story
@@ -39,6 +40,7 @@ third_party_settings:
     group_fields:
       children:
         - title
+        - field_subheading
         - field_content
         - field_background_image
         - field_image
@@ -82,7 +84,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_background_image:
-    weight: 3
+    weight: 4
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -102,7 +104,7 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_content:
-    weight: 2
+    weight: 3
     settings:
       rows: 5
       placeholder: ''
@@ -110,20 +112,20 @@ content:
     type: text_textarea
     region: content
   field_header_theme:
-    weight: 8
+    weight: 9
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_hide_contact_button:
-    weight: 9
+    weight: 10
     settings:
       display_label: true
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
   field_image:
-    weight: 4
+    weight: 5
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
@@ -131,13 +133,13 @@ content:
     type: image_image
     region: content
   field_industry:
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_market:
-    weight: 7
+    weight: 8
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -148,8 +150,16 @@ content:
     third_party_settings: {  }
     type: metatag_firehose
     region: content
+  field_subheading:
+    weight: 2
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_success_story_company:
-    weight: 5
+    weight: 6
     settings:
       size: 60
       placeholder: ''
