--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_success_stories_a.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_success_stories_a.default.yml
@@ -3,17 +3,17 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.paragraph.block_success_stories_a.field_article
     - field.field.paragraph.block_success_stories_a.field_scroll_id
     - field.field.paragraph.block_success_stories_a.field_styles
+    - field.field.paragraph.block_success_stories_a.field_success_story
     - paragraphs.paragraphs_type.block_success_stories_a
 id: paragraph.block_success_stories_a.default
 targetEntityType: paragraph
 bundle: block_success_stories_a
 mode: default
 content:
-  field_article:
-    weight: 1
+  field_success_story:
+    weight: 0
     label: above
     settings:
       link: true
