--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_success_stories_b.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.block_success_stories_b.default.yml
@@ -4,11 +4,11 @@ status: true
 dependencies:
   config:
     - field.field.paragraph.block_success_stories_b.field_alignment
-    - field.field.paragraph.block_success_stories_b.field_articles
     - field.field.paragraph.block_success_stories_b.field_new_heading
     - field.field.paragraph.block_success_stories_b.field_paragraph
     - field.field.paragraph.block_success_stories_b.field_scroll_id
     - field.field.paragraph.block_success_stories_b.field_styles
+    - field.field.paragraph.block_success_stories_b.field_success_stories
     - paragraphs.paragraphs_type.block_success_stories_b
   module:
     - entity_reference_revisions
@@ -26,14 +26,6 @@ content:
     third_party_settings: {  }
     type: list_default
     region: content
-  field_articles:
-    weight: 2
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_new_heading:
     weight: 0
     label: above
@@ -49,6 +41,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_success_stories:
+    weight: 4
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
 hidden:
   field_scroll_id: true
