--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_find_your_audience.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_find_your_audience.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.paragraph.block_find_your_audience.field_genres
     - field.field.paragraph.block_find_your_audience.field_networks
     - field.field.paragraph.block_find_your_audience.field_scroll_id
+    - field.field.paragraph.block_find_your_audience.field_show_see_all_links
     - field.field.paragraph.block_find_your_audience.field_styles
     - field.field.paragraph.block_find_your_audience.field_top_picks
     - paragraphs.paragraphs_type.block_find_your_audience
@@ -30,7 +31,7 @@ third_party_settings:
       children:
         - field_top_picks
       parent_name: ''
-      weight: 2
+      weight: 3
       format_type: fieldset
       format_settings:
         id: ''
@@ -42,7 +43,7 @@ third_party_settings:
       children:
         - field_genres
       parent_name: ''
-      weight: 3
+      weight: 4
       format_type: fieldset
       format_settings:
         id: ''
@@ -54,7 +55,7 @@ third_party_settings:
       children:
         - field_networks
       parent_name: ''
-      weight: 4
+      weight: 5
       format_type: fieldset
       format_settings:
         id: ''
@@ -62,6 +63,18 @@ third_party_settings:
         description: ''
         required_fields: true
       label: Networks
+    group_show_see_all_links:
+      children:
+        - field_show_see_all_links
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: 'Show "See all" links'
 id: paragraph.block_find_your_audience.default
 targetEntityType: paragraph
 bundle: block_find_your_audience
@@ -98,6 +111,13 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+    region: content
+  field_show_see_all_links:
+    weight: 7
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
     region: content
   field_styles:
     type: entity_reference_paragraphs
