--- a/source/drupal/var/drupal-config/sync/user.role.anonymous.yml
+++ b/source/drupal/var/drupal-config/sync/user.role.anonymous.yml
@@ -23,3 +23,4 @@ permissions:
   - 'restful post spectrum_rest_contact_v1'
   - 'restful post spectrum_rest_view_counter_v1'
   - 'search content'
+  - 'view media'
