--- a/source/drupal/var/drupal-config/sync/user.role.authenticated.yml
+++ b/source/drupal/var/drupal-config/sync/user.role.authenticated.yml
@@ -30,3 +30,4 @@ permissions:
   - 'use text format basic_html'
   - 'use text format bold_html'
   - 'use text format restricted_html'
+  - 'view media'
