--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.blockquote.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.paragraph.blockquote.default.yml
@@ -8,56 +8,22 @@ dependencies:
     - field.field.paragraph.blockquote.field_label
     - field.field.paragraph.blockquote.field_styles
     - field.field.paragraph.blockquote.field_title
-    - image.style.preview_500xauto
     - paragraphs.paragraphs_type.blockquote
-  module:
-    - entity_reference_revisions
-    - image
 id: paragraph.blockquote.default
 targetEntityType: paragraph
 bundle: blockquote
 mode: default
 content:
-  field_description:
-    weight: 5
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_image:
-    weight: 3
-    label: above
-    settings:
-      image_style: preview_500xauto
-      image_link: ''
-    third_party_settings: {  }
-    type: image
-    region: content
   field_label:
-    weight: 2
+    weight: 0
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
-  field_styles:
-    weight: 4
-    label: above
-    settings:
-      view_mode: default
-      link: ''
-    third_party_settings: {  }
-    type: entity_reference_revisions_entity_view
-    region: content
-  field_title:
-    weight: 1
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-hidden: {  }
+hidden:
+  field_description: true
+  field_image: true
+  field_styles: true
+  field_title: true
