--- a/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherosecondary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_form_display.paragraph.blockherosecondary.default.yml
@@ -8,7 +8,9 @@ dependencies:
     - field.field.paragraph.blockherosecondary.field_heading
     - field.field.paragraph.blockherosecondary.field_image
     - field.field.paragraph.blockherosecondary.field_link
+    - field.field.paragraph.blockherosecondary.field_new_heading
     - field.field.paragraph.blockherosecondary.field_paragraph
+    - field.field.paragraph.blockherosecondary.field_primary_heading
     - field.field.paragraph.blockherosecondary.field_styles
     - field.field.paragraph.blockherosecondary.field_video
     - image.style.thumbnail
@@ -26,7 +28,7 @@ third_party_settings:
       children:
         - field_styles
       parent_name: ''
-      weight: 1
+      weight: 2
       format_type: details
       format_settings:
         id: ''
@@ -38,7 +40,7 @@ third_party_settings:
       children:
         - field_link
       parent_name: ''
-      weight: 4
+      weight: 5
       format_type: details
       format_settings:
         id: ''
@@ -52,24 +54,19 @@ bundle: blockherosecondary
 mode: default
 content:
   field_background_color:
-    weight: 6
+    weight: 7
     settings: {  }
     third_party_settings: {  }
     type: color_field_widget_html5
-  field_heading:
-    weight: 0
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
+    region: content
   field_image:
-    weight: 2
+    weight: 3
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
+    region: content
   field_link:
     weight: 3
     settings:
@@ -81,13 +78,35 @@ content:
       default_paragraph_type: ''
     third_party_settings: {  }
     type: entity_reference_paragraphs
+    region: content
+  field_new_heading:
+    weight: 0
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
+    type: entity_reference_paragraphs
+    region: content
   field_paragraph:
-    weight: 5
+    weight: 6
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
+  field_primary_heading:
+    weight: 1
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
   field_styles:
     weight: 1
     settings:
@@ -99,8 +118,9 @@ content:
       default_paragraph_type: styles
     third_party_settings: {  }
     type: entity_reference_paragraphs
+    region: content
   field_video:
-    weight: 3
+    weight: 4
     settings:
       entity_browser: video_internal
       field_widget_display: rendered_entity
@@ -112,7 +132,9 @@ content:
       open: false
     third_party_settings: {  }
     type: entity_browser_entity_reference
+    region: content
 hidden:
   created: true
+  field_heading: true
   status: true
   uid: true
