--- a/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockherosecondary.default.yml
+++ b/deploy/var/drupal-config/sync/core.entity_view_display.paragraph.blockherosecondary.default.yml
@@ -7,7 +7,9 @@ dependencies:
     - field.field.paragraph.blockherosecondary.field_heading
     - field.field.paragraph.blockherosecondary.field_image
     - field.field.paragraph.blockherosecondary.field_link
+    - field.field.paragraph.blockherosecondary.field_new_heading
     - field.field.paragraph.blockherosecondary.field_paragraph
+    - field.field.paragraph.blockherosecondary.field_primary_heading
     - field.field.paragraph.blockherosecondary.field_styles
     - field.field.paragraph.blockherosecondary.field_video
     - image.style.preview_500xauto
@@ -30,12 +32,14 @@ content:
       opacity: true
     third_party_settings: {  }
     type: color_field_formatter_text
+    region: content
   field_heading:
     weight: 9
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
   field_image:
     weight: 1
     label: above
@@ -44,6 +48,7 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
   field_link:
     weight: 2
     label: above
@@ -52,12 +57,31 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
+  field_new_heading:
+    weight: 10
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    type: entity_reference_revisions_entity_view
+    region: content
   field_paragraph:
     weight: 3
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_primary_heading:
+    weight: 11
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
   field_styles:
     weight: 0
     label: above
@@ -66,6 +90,7 @@ content:
       link: ''
     third_party_settings: {  }
     type: entity_reference_revisions_entity_view
+    region: content
   field_video:
     weight: 7
     label: above
@@ -73,4 +98,5 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
 hidden: {  }
