--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.node.product_page.teaser.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.node.product_page.teaser.yml
@@ -25,4 +25,10 @@ content:
   links:
     weight: 100
     region: content
-hidden: {  }
+hidden:
+  field_background_image: true
+  field_blocks: true
+  field_header_theme: true
+  field_hide_contact_button: true
+  field_image: true
+  field_metatags: true
