--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.node.show.teaser.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.node.show.teaser.yml
@@ -25,8 +25,11 @@ content:
     weight: 100
     region: content
 hidden:
+  field_audience_statistics: true
   field_broadcast_schedule: true
+  field_hero_quaternary: true
   field_image: true
+  field_show_background_image: true
   field_show_description: true
   field_show_genres: true
   field_show_id: true
@@ -37,5 +40,7 @@ hidden:
   field_show_recommend: true
   field_show_schedules: true
   field_show_videos: true
+  field_similar_networks: true
+  field_success_stories_a: true
   field_tags: true
   field_video_external: true
