Purger config ignore.

--- a/source/drupal/var/drupal-config/sync/config_split.config_split.ignore_config.yml
+++ b/source/drupal/var/drupal-config/sync/config_split.config_split.ignore_config.yml
@@ -15,6 +15,7 @@ blacklist:
   - spectrum_twitter_api.settings
   - system.file
   - xmlsitemap.xmlsitemap.NXhscRe0440PFpI5dSznEVgmauL25KojD7u4e9aZwOM
+  - purge_queuer_coretags.settings
 graylist:
   - system.performance
 graylist_dependents: true
