--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.blockquote.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.blockquote.default.yml
@@ -9,6 +9,35 @@ dependencies:
     - field.field.paragraph.blockquote.field_styles
     - field.field.paragraph.blockquote.field_title
     - paragraphs.paragraphs_type.blockquote
+  module:
+    - field_group
+    - paragraphs
+third_party_settings:
+  field_group:
+    group_styles:
+      children:
+        - field_styles
+      parent_name: ''
+      weight: 0
+      format_type: details
+      format_settings:
+        id: ''
+        classes: ''
+        open: false
+        required_fields: true
+      label: Styles
+    group_quote:
+      children:
+        - field_label
+      parent_name: ''
+      weight: 20
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        required_fields: true
+      label: Quote
 id: paragraph.blockquote.default
 targetEntityType: paragraph
 bundle: blockquote
@@ -22,11 +51,22 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_styles:
+    type: entity_reference_paragraphs
+    weight: 0
+    region: content
+    settings:
+      title: Paragraph
+      title_plural: Paragraphs
+      edit_mode: open
+      add_mode: dropdown
+      form_display_mode: default
+      default_paragraph_type: ''
+    third_party_settings: {  }
 hidden:
   created: true
   field_description: true
   field_image: true
-  field_styles: true
   field_title: true
   status: true
   uid: true
