Ready #600: Text format on Success Stories changed to basic

--- a/source/drupal/var/drupal-config/sync/field.field.node.success_story.field_content.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.success_story.field_content.yml
@@ -19,8 +19,8 @@ default_value: {  }
 default_value_callback: ''
 settings:
   allowed_formats:
-    bold_html: bold_html
-    basic_html: '0'
+    basic_html: basic_html
+    bold_html: '0'
     restricted_html: '0'
     full_html: '0'
     plain_text: '0'
