--- a/source/drupal/var/drupal-config/sync/editor.editor.basic_html.yml
+++ b/source/drupal/var/drupal-config/sync/editor.editor.basic_html.yml
@@ -19,6 +19,11 @@ settings:
           items:
             - Bold
             - Italic
+            - '-'
+            - JustifyLeft
+            - JustifyCenter
+            - JustifyRight
+            - JustifyBlock
         -
           name: Linking
           items:
@@ -43,6 +48,8 @@ settings:
           items:
             - Source
   plugins:
+    language:
+      language_list: un
     stylescombo:
       styles: ''
 image_upload:
@@ -51,5 +58,5 @@ image_upload:
   directory: inline-images
   max_size: ''
   max_dimensions:
-    width: 0
-    height: 0
+    width: null
+    height: null
