Task #627: Fixed schedule display on shows

--- a/source/drupal/docroot/modules/custom/spectrum_rest/spectrum_rest.services.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_rest/spectrum_rest.services.yml
@@ -8,3 +8,6 @@ services:
     arguments: [ '@mm_rest.request_matcher' ]
     tags:
       - { name: event_subscriber }
+  spectrum_rest.shows.utility:
+    class: Drupal\spectrum_rest\Utility\SpectrumShowsUtility
+    arguments: [ '@plugin.manager.mm_rest_entity_processor']
