--- a/source/drupal/composer.json
+++ b/source/drupal/composer.json
@@ -156,6 +156,7 @@
         }
     },
     "require-dev": {
-        "drupal/coder": "^8.2"
+        "drupal/coder": "^8.2",
+        "phpunit/phpunit": "^5.7"
     }
 }
