--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_hero_quaternary.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.paragraph.block_hero_quaternary.default.yml
@@ -7,11 +7,13 @@ dependencies:
     - field.field.paragraph.block_hero_quaternary.field_background_image
     - field.field.paragraph.block_hero_quaternary.field_link
     - field.field.paragraph.block_hero_quaternary.field_new_heading
+    - field.field.paragraph.block_hero_quaternary.field_overlay
     - field.field.paragraph.block_hero_quaternary.field_paragraph
     - field.field.paragraph.block_hero_quaternary.field_paragraph_image
     - field.field.paragraph.block_hero_quaternary.field_scroll_id
     - field.field.paragraph.block_hero_quaternary.field_styles
     - field.field.paragraph.block_hero_quaternary.field_subheading
+    - field.field.paragraph.block_hero_quaternary.field_triangle
     - field.field.paragraph.block_hero_quaternary.field_video
     - paragraphs.paragraphs_type.block_hero_quaternary
   module:
@@ -37,7 +39,7 @@ third_party_settings:
       children:
         - field_new_heading
       parent_name: ''
-      weight: 2
+      weight: 4
       format_type: fieldset
       format_settings:
         id: ''
@@ -49,7 +51,7 @@ third_party_settings:
       children:
         - field_link
       parent_name: ''
-      weight: 8
+      weight: 10
       format_type: fieldset
       format_settings:
         id: ''
@@ -64,7 +66,7 @@ mode: default
 content:
   field_background_image:
     type: entity_reference_paragraphs
-    weight: 6
+    weight: 8
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -79,10 +81,10 @@ content:
     settings:
       title: Paragraph
       title_plural: Paragraphs
-      edit_mode: open
+      edit_mode: closed
       add_mode: dropdown
       form_display_mode: default
-      default_paragraph_type: ''
+      default_paragraph_type: link
     third_party_settings: {  }
     type: entity_reference_paragraphs
     region: content
@@ -98,8 +100,15 @@ content:
       default_paragraph_type: ''
     third_party_settings: {  }
     region: content
+  field_overlay:
+    weight: 2
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_paragraph:
-    weight: 4
+    weight: 6
     settings:
       rows: 5
       placeholder: ''
@@ -108,7 +117,7 @@ content:
     region: content
   field_paragraph_image:
     type: entity_reference_paragraphs
-    weight: 7
+    weight: 9
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -139,15 +148,22 @@ content:
     type: entity_reference_paragraphs
     region: content
   field_subheading:
-    weight: 3
+    weight: 5
     settings:
       size: 60
       placeholder: ''
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_triangle:
+    weight: 3
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_video:
-    weight: 5
+    weight: 7
     settings:
       entity_browser: video
       field_widget_display: label
