--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.block_hero_quaternary.field_new_heading.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.block_hero_quaternary.field_new_heading.yml
@@ -14,7 +14,7 @@ entity_type: paragraph
 bundle: block_hero_quaternary
 label: Heading
 description: ''
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
@@ -183,6 +183,9 @@ settings:
       stepmap:
         weight: 109
         enabled: false
+      audience_statistics_item:
+        weight: 110
+        enabled: false
       steppurchase:
         weight: 110
         enabled: false
@@ -191,5 +194,161 @@ settings:
         enabled: false
       styles:
         weight: 112
+        enabled: false
+      block_audience_product_top:
+        weight: 112
+        enabled: false
+      block_audience_quote:
+        weight: 113
+        enabled: false
+      block_audience_reach:
+        weight: 114
+        enabled: false
+      block_audience_statistics:
+        weight: 115
+        enabled: false
+      block_audience_statistics_b:
+        weight: 116
+        enabled: false
+      block_audience_top_programming:
+        weight: 117
+        enabled: false
+      block_blog_post_b:
+        weight: 118
+        enabled: false
+      block_core_product_message:
+        weight: 119
+        enabled: false
+      block_double_image:
+        weight: 120
+        enabled: false
+      block_download_file_a:
+        weight: 121
+        enabled: false
+      block_download_file_b:
+        weight: 122
+        enabled: false
+      block_filter_network_content:
+        weight: 123
+        enabled: false
+      block_filter_show_content:
+        weight: 124
+        enabled: false
+      block_find_your_audience:
+        weight: 125
+        enabled: false
+      block_glossary_a:
+        weight: 126
+        enabled: false
+      block_glossary_b:
+        weight: 127
+        enabled: false
+      block_hero_quinary:
+        weight: 129
+        enabled: false
+      block_image_list:
+        weight: 130
+        enabled: false
+      block_image_with_content_b:
+        weight: 131
+        enabled: false
+      block_image_with_content_c:
+        weight: 132
+        enabled: false
+      block_infographic:
+        weight: 133
+        enabled: false
+      block_large_video:
+        weight: 134
+        enabled: false
+      block_main_product_nav:
+        weight: 135
+        enabled: false
+      block_multiple_images:
+        weight: 137
+        enabled: false
+      block_persona_selector_banner:
+        weight: 139
+        enabled: false
+      block_product_list:
+        weight: 140
+        enabled: false
+      block_show_detail:
+        weight: 141
+        enabled: false
+      block_success_stories_a:
+        weight: 142
+        enabled: false
+      block_success_stories_b:
+        weight: 143
+        enabled: false
+      block_success_story_highlight:
+        weight: 144
+        enabled: false
+      block_success_story_impact:
+        weight: 145
+        enabled: false
+      block_success_story_post:
+        weight: 146
+        enabled: false
+      block_target_audience:
+        weight: 147
+        enabled: false
+      block_triple_content:
+        weight: 148
+        enabled: false
+      block_twitter_feed:
+        weight: 149
+        enabled: false
+      block_video_with_content_c:
+        weight: 152
+        enabled: false
+      blog_post_item:
+        weight: 183
+        enabled: false
+      channel:
+        weight: 186
+        enabled: false
+      core_product_message_item:
+        weight: 187
+        enabled: false
+      device:
+        weight: 188
+        enabled: false
+      glossary_a_item:
+        weight: 189
+        enabled: false
+      image_with_video_and_text:
+        weight: 192
+        enabled: false
+      label_and_value:
+        weight: 193
+        enabled: false
+      networks:
+        weight: 197
+        enabled: false
+      shows_by_genre:
+        weight: 202
+        enabled: false
+      skills:
+        weight: 203
+        enabled: false
+      slide_item:
+        weight: 205
+        enabled: false
+      spacer:
+        weight: 207
+        enabled: false
+      success_story_statistic:
+        weight: 215
+        enabled: false
+      text_and_link:
+        weight: 216
+        enabled: false
+      top_picks:
+        weight: 217
+        enabled: false
+      triple_content_item:
+        weight: 218
         enabled: false
 field_type: entity_reference_revisions
