--- a/source/drupal/var/drupal-config/sync/field.field.paragraph.block_hero_quaternary.field_paragraph.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.paragraph.block_hero_quaternary.field_paragraph.yml
@@ -13,7 +13,7 @@ entity_type: paragraph
 bundle: block_hero_quaternary
 label: Paragraph
 description: ''
-required: true
+required: false
 translatable: true
 default_value: {  }
 default_value_callback: ''
