--- a/source/drupal/composer.json
+++ b/source/drupal/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "composer/installers": "^1.0.20",
         "cweagans/composer-patches": "~1.0",
-        "drupal/core": "~8.4",
+        "drupal/core": "8.4.6",
         "drush/drush": "~8.1",
         "drupal/menu_admin_per_menu": "^1.0",
         "drupal/metatag": "1.0",
