Ready #643: Updated migrations to not override blank fields

--- a/source/drupal/docroot/modules/custom/spectrum_shows_import/config/install/migrate_plus.migration.network.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_shows_import/config/install/migrate_plus.migration.network.yml
@@ -54,5 +54,5 @@ process:
   image/alt: Stationname
 
 destination:
-  plugin: 'entity:network'
+  plugin: 'entity_networks'
 migration_dependencies: null
