--- a/source/drupal/docroot/modules/custom/spectrum_shows_import/config/install/migrate_plus.migration.shows.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_shows_import/config/install/migrate_plus.migration.shows.yml
@@ -163,7 +163,7 @@ process:
     default_value: 1
 
 destination:
-  plugin: 'entity:node'
+  plugin: 'node_shows'
 migration_dependencies:
   optional:
     - genres
