Updated migrations config

--- a/source/drupal/var/drupal-config/sync/migrate_plus.migration.genres.yml
+++ b/source/drupal/var/drupal-config/sync/migrate_plus.migration.genres.yml
@@ -13,7 +13,7 @@ migration_group: migrate_shows_json
 label: 'JSON feed of genres'
 source:
   plugin: spectrum_url
-  data_fetcher_plugin: http
+  data_fetcher_plugin: spectrum_http
   data_parser_plugin: json_nested
   item_selector: /Result/
   sub_selector: Genres
