--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.node.network.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.node.network.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.network.field_image
     - field.field.node.network.field_image2
     - field.field.node.network.field_network
+    - field.field.node.network.field_order_position
     - image.style.thumbnail
     - node.type.network
   module:
@@ -36,6 +37,7 @@ third_party_settings:
         - field_image
         - field_image2
         - field_network
+        - field_order_position
       parent_name: group_tabs
       weight: 1
       format_type: tab
@@ -119,6 +121,12 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: entity_reference_autocomplete
+    region: content
+  field_order_position:
+    weight: 7
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
     region: content
   path:
     type: path
