--- a/source/drupal/var/drupal-config/sync/core.entity_form_display.node.show.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_form_display.node.show.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.show.field_audience_statistics
     - field.field.node.show.field_hero_quaternary
     - field.field.node.show.field_image
+    - field.field.node.show.field_order_position
     - field.field.node.show.field_show_background_image
     - field.field.node.show.field_show_description
     - field.field.node.show.field_show_genres
@@ -31,6 +32,7 @@ third_party_settings:
     group_fields:
       children:
         - title
+        - field_order_position
         - field_show_description
         - field_image
         - field_show_background_image
@@ -114,16 +116,22 @@ content:
     third_party_settings: {  }
     region: content
   field_image:
-    weight: 2
+    weight: 3
     settings:
       progress_indicator: throbber
       preview_image_style: thumbnail
     third_party_settings: {  }
     type: image_image
     region: content
+  field_order_position:
+    weight: 1
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_show_background_image:
     type: entity_reference_paragraphs
-    weight: 3
+    weight: 4
     settings:
       title: Paragraph
       title_plural: Paragraphs
@@ -135,48 +143,13 @@ content:
     region: content
   field_show_description:
     type: string_textarea
-    weight: 1
+    weight: 2
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
   field_show_genres:
-    type: entity_reference_autocomplete
-    weight: 4
-    region: content
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_show_links:
-    type: link_default
-    weight: 10
-    region: content
-    settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-  field_show_media_type:
-    type: entity_reference_autocomplete
-    weight: 9
-    region: content
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_show_network:
-    type: entity_reference_autocomplete
-    weight: 7
-    region: content
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-  field_show_recommend:
     type: entity_reference_autocomplete
     weight: 5
     region: content
@@ -185,7 +158,33 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_show_schedules:
+  field_show_links:
+    type: link_default
+    weight: 11
+    region: content
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+  field_show_media_type:
+    type: entity_reference_autocomplete
+    weight: 10
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_show_network:
+    type: entity_reference_autocomplete
+    weight: 8
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_show_recommend:
     type: entity_reference_autocomplete
     weight: 6
     region: content
@@ -194,9 +193,18 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
+  field_show_schedules:
+    type: entity_reference_autocomplete
+    weight: 7
+    region: content
+    settings:
+      match_operator: CONTAINS
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
   field_show_videos:
     type: entity_reference_autocomplete
-    weight: 8
+    weight: 9
     region: content
     settings:
       match_operator: CONTAINS
