--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.node.network.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.node.network.default.yml
@@ -9,10 +9,12 @@ dependencies:
     - field.field.node.network.field_image
     - field.field.node.network.field_image2
     - field.field.node.network.field_network
+    - field.field.node.network.field_order_position
     - node.type.network
   module:
     - entity_reference_revisions
     - image
+    - options
     - user
 id: node.network.default
 targetEntityType: node
@@ -71,6 +73,13 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
+    region: content
+  field_order_position:
+    weight: 107
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
   links:
     weight: 100
