--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.node.show.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.node.show.default.yml
@@ -6,6 +6,7 @@ dependencies:
     - field.field.node.show.field_audience_statistics
     - field.field.node.show.field_hero_quaternary
     - field.field.node.show.field_image
+    - field.field.node.show.field_order_position
     - field.field.node.show.field_show_background_image
     - field.field.node.show.field_show_description
     - field.field.node.show.field_show_genres
@@ -23,6 +24,7 @@ dependencies:
     - entity_reference_revisions
     - image
     - link
+    - options
     - user
 id: node.show.default
 targetEntityType: node
@@ -55,6 +57,13 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_order_position:
+    weight: 120
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_show_background_image:
     type: entity_reference_revisions_entity_view
