--- a/source/drupal/var/drupal-config/sync/search_api.index.shows.yml
+++ b/source/drupal/var/drupal-config/sync/search_api.index.shows.yml
@@ -5,10 +5,12 @@ dependencies:
   config:
     - field.storage.node.field_show_genres
     - field.storage.node.field_show_network
+    - field.storage.node.field_order_position
     - search_api.server.database
   module:
     - spectrum_shows
     - search_api
+    - mm_rest_search
     - node
 id: shows
 name: Shows
@@ -61,6 +63,14 @@ field_settings:
         - field.storage.node.field_show_network
       module:
         - spectrum_shows
+  field_order_position:
+    label: 'Order position'
+    datasource_id: 'entity:node'
+    property_path: field_order_position
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_order_position
 processor_settings:
   add_url:
     plugin_id: add_url
@@ -71,9 +81,7 @@ processor_settings:
   ignorecase:
     plugin_id: ignorecase
     settings:
-      fields:
-        - field_show_genres
-        - field_show_network
+      fields: {  }
       weights:
         preprocess_index: -10
         preprocess_query: -10
@@ -88,6 +96,9 @@ processor_settings:
     settings:
       weights:
         preprocess_query: -10
+  order_position:
+    plugin_id: order_position
+    settings: {  }
 options:
   index_directly: true
   cron_limit: 50
