--- a/source/drupal/var/drupal-config/sync/search_api.index.shows.yml
+++ b/source/drupal/var/drupal-config/sync/search_api.index.shows.yml
@@ -71,7 +71,15 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_order_position
+  title:
+    label: Title
+    datasource_id: 'entity:node'
+    property_path: title
+    type: string
 processor_settings:
+  order_position:
+    plugin_id: order_position
+    settings: {  }
   add_url:
     plugin_id: add_url
     settings: {  }
@@ -96,9 +104,6 @@ processor_settings:
     settings:
       weights:
         preprocess_query: -10
-  order_position:
-    plugin_id: order_position
-    settings: {  }
 options:
   index_directly: true
   cron_limit: 50
