--- a/source/drupal/var/drupal-config/sync/core.entity_view_display.node.network.default.yml
+++ b/source/drupal/var/drupal-config/sync/core.entity_view_display.node.network.default.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.network.field_image
     - field.field.node.network.field_image2
     - field.field.node.network.field_network
+    - field.field.node.network.field_network_similar_networks
     - field.field.node.network.field_order_position
     - node.type.network
   module:
@@ -68,6 +69,14 @@ content:
     region: content
   field_network:
     weight: 103
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_network_similar_networks:
+    weight: 108
     label: above
     settings:
       link: true
