--- a/source/drupal/docroot/modules/custom/spectrum_shows_import/config/install/migrate_plus.migration.shows.yml
+++ b/source/drupal/docroot/modules/custom/spectrum_shows_import/config/install/migrate_plus.migration.shows.yml
@@ -69,17 +69,15 @@ process:
     plugin: entity_generate
     source: MediaType
 
-  field_show_network/target_id:
-    -
-      plugin: extract
-      source: network
-      index:
-        - Stationnum
-
-    -
-      plugin: migration_lookup
-      no_stub: true
-      migration: network
+  field_show_network:
+    plugin: sub_process
+    source: network
+    process:
+     target_id:
+       plugin: migration_lookup
+       no_stub: true
+       migration: network
+       source: Stationnum
 
   field_show_description:
     plugin: extract
