--- a/source/drupal/var/drupal-config/sync/migrate_plus.migration.shows.yml
+++ b/source/drupal/var/drupal-config/sync/migrate_plus.migration.shows.yml
@@ -73,16 +73,15 @@ process:
   field_show_media_type:
     plugin: entity_generate
     source: MediaType
-  field_show_network/target_id:
-    -
-      plugin: extract
-      source: network
-      index:
-        - Stationnum
-    -
-      plugin: migration_lookup
-      no_stub: true
-      migration: network
+  field_show_network:
+    plugin: sub_process
+    source: network
+    process:
+      target_id:
+        plugin: migration_lookup
+        no_stub: true
+        migration: network
+        source: Stationnum
   field_show_description:
     plugin: extract
     source: Descriptions
