--- a/source/drupal/var/drupal-config/sync/field.field.node.market.field_market_network_logos.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.market.field_market_network_logos.yml
@@ -1,11 +1,10 @@
-uuid: 582a31c5-29c1-437c-9476-a8b21c1c3d60
+uuid: ca7cd6a5-9c0f-4442-a48c-365345217667
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_market_network_logos
     - node.type.market
-    - node.type.network
 id: node.market.field_market_network_logos
 field_name: field_market_network_logos
 entity_type: node
@@ -17,12 +16,10 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:node'
+  handler: 'default:network'
   handler_settings:
-    target_bundles:
-      network: network
+    target_bundles: null
     sort:
       field: _none
     auto_create: false
-    auto_create_bundle: ''
 field_type: entity_reference
