--- a/source/drupal/var/drupal-config/sync/field.field.node.market.field_market_top_networks.yml
+++ b/source/drupal/var/drupal-config/sync/field.field.node.market.field_market_top_networks.yml
@@ -1,11 +1,10 @@
-uuid: de6febe7-0078-4c12-9b58-5a8e52ce533e
+uuid: 1d312cb2-f0b7-4878-bd9c-7c2d00f9e19e
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.node.field_market_top_networks
     - node.type.market
-    - node.type.network
 id: node.market.field_market_top_networks
 field_name: field_market_top_networks
 entity_type: node
@@ -17,12 +16,10 @@ translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
-  handler: 'default:node'
+  handler: 'default:network'
   handler_settings:
-    target_bundles:
-      network: network
+    target_bundles: null
     sort:
       field: _none
     auto_create: false
-    auto_create_bundle: ''
 field_type: entity_reference
