--- a/source/drupal/var/drupal-config/sync/search_api_db.settings.yml
+++ b/source/drupal/var/drupal-config/sync/search_api_db.settings.yml
@@ -1,3 +1,3 @@
-autocomplete_max_occurrences: 0.9
+autocomplete_max_occurrences: 0.90000000000009
 _core:
   default_config_hash: 1oDrVmUfNY3gp0cRBV5bSXj1OdMCinSoSCM5qeZdLNU
